Text overflow fix

--- a/Static/css/comunidapp.css
+++ b/Static/css/comunidapp.css
@@ -228,6 +228,7 @@ a:hover{
     flex-direction: column;
     margin-left: 16px;
     margin-bottom: 5px;
+    width: 200px;
 }
 
 .m-user-info__text > p {
